syntax = "proto3";

package linkgenerator;

option go_package = "./proto";

service LinkService {
  rpc ShortenLink(LinkRequest) returns (LinkResponse) {}
  rpc ExpandLink(LinkRequest) returns (LinkResponse) {}
}

message LinkRequest {
  string original_link = 1;
}

message LinkResponse {
  string short_link = 1;
  string error_message = 2;
}
